buttons is made

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -6,6 +6,8 @@
 
 // Layout
 @import "./layout/base";
+@import "./layout/buttons";
 
 // Modules
 @import "./modules/header";
+@import "./modules//page-buttons";
