--- a/src/assets/style/variables/_font-sezes.scss
+++ b/src/assets/style/variables/_font-sezes.scss
@@ -1,2 +1,4 @@
 $nwy-font-p-size: calc(18px + 0 * ((100vw - 768px) / 1152));
 $nwy-font-p: 400 $nwy-font-p-size / 1.4 "InterstateLight", sans-serif;
+
+$libs-font-p: 700 15px "InterstateLight", sans-serif;
