modal wrap is done

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -11,3 +11,8 @@
 // Modules
 @import "./modules/header";
 @import "./modules//page-buttons";
+@import "./modules/modal";
+@import "./modules/cross-btn";
+
+// Partials
+@import "./partials/animations";
