--- a/src/assets/style/layout/_buttons.scss
+++ b/src/assets/style/layout/_buttons.scss
@@ -4,30 +4,38 @@
     border: 0;
     cursor: pointer;
     transition: 1s all;
+    font: $nwy-font-p;
+    line-height: 15px;
     &:hover {
         transition: 1s all;
     }
     &--primary {
         background-color: $color-seconary;
-        font: $nwy-font-p;
-        line-height: 15px;
         &:hover {
             background-color: $color-seconary-alt;
+        }
+    }
+    &--gray {
+        background-color: $color-gray;
+        &:hover {
+            background-color: $color-gray-alt;
         }
     }
 }
 
 .btn2 {
     padding: 11px 22px;
-    background: $color-libs-primary;
-    border: 1px solid $color-libs-primary;
     border-radius: 8px;
-    font: $libs-font-p;
-    color: #fff;
-    cursor: pointer;
     transition: 1s all;
-    &:hover {
-        background-color: $color-libs-primary-alt;
-        transition: 1s all;
+    cursor: pointer;
+    &--primary {
+        background: $color-libs-primary;
+        border: 1px solid $color-libs-primary;
+        font: $libs-font-p;
+        color: #fff;
+        &:hover {
+            background-color: $color-libs-primary-alt;
+            transition: 1s all;
+        }
     }
 }
