--- a/src/assets/style/variables/_colors.scss
+++ b/src/assets/style/variables/_colors.scss
@@ -1,6 +1,9 @@
 $color-primary: #0071ce;
 $color-seconary: #ffd200;
 $color-seconary-alt: #ffd824;
+$color-gray: #d9d2cb;
+$color-gray-alt: #767676;
 
-$color-libs-primary: #3366ff;   
+
+$color-libs-primary: #3366ff;
 $color-libs-primary-alt: #3366ffd9;
