--- a/src/assets/style/variables/_font-sezes.scss
+++ b/src/assets/style/variables/_font-sezes.scss
@@ -1,4 +1,8 @@
 $nwy-font-p-size: calc(18px + 0 * ((100vw - 768px) / 1152));
 $nwy-font-p: 400 $nwy-font-p-size / 1.4 "InterstateLight", sans-serif;
+$nwy-font-label-size: calc(16px + 0 * ((100vw - 768px) / 1152));
+$nwy-font-label: $nwy-font-label-size/normal "InterstateLight", sans-serif;
+$nwy-font-input-size: calc(16px + 2 * ((100vw - 768px) / 1152));
+$nwy-font-input: 400 $nwy-font-input-size / normal "Interstate", sans-serif;
 
 $libs-font-p: 700 15px "InterstateLight", sans-serif;
