nav bar mobile done

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -13,6 +13,7 @@
 @import "./modules//page-buttons";
 @import "./modules/modal";
 @import "./modules/cross-btn";
+@import "./modules/menu-btn";
 @import "./modules/input";
 
 // Partials
