--- a/src/assets/style/modules/_header.scss
+++ b/src/assets/style/modules/_header.scss
@@ -3,16 +3,31 @@
     background-color: $color-primary;
     &__wrap {
         height: 100%;
+        padding: 0 40px;
+        position: relative;
+        @media screen and (max-width: 992px) {
+            padding: 0 35px 0 5px;
+        }
     }
     &__logo {
         a {
             display: block;
             padding: auto 0;
-            max-height: 60px;
+            img {
+                @media screen and (max-width: 992px) {
+                    width: 100%;
+                }
+            }
+        }
+        @media screen and (max-width: 992px) {
+            margin-right: 25%;
         }
     }
     &__body {
         &__nav {
+            @media screen and (max-width: 992px) {
+                display: none;
+            }
             &__item {
                 color: white;
                 font: $nwy-font-p;
@@ -26,6 +41,44 @@
                     color: $color-seconary;
                     transition: 0.5s all;
                 }
+            }
+        }
+    }
+    &__burger {
+        position: absolute;
+        background-color: $color-seconary;
+        right: 0;
+        top: 0;
+        height: 100%;
+        aspect-ratio: 1/1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        @media screen and (min-width: 992px) {
+            display: none;
+        }
+    }
+    &__sub-menu {
+        box-sizing: border-box;
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        background-color: #fff;
+        z-index: 300;
+        padding: 20px;
+        &__item {
+            margin-bottom: 20px;
+            font: $nwy-font-nav;
+            display: block;
+            font-weight: bold;
+            color: $color-dark;
+            &--active {
+                color: $color-primary;
+                transition: 0.5s all;
+            }
+            &:hover {
+                color: $color-primary;
+                transition: 0.5s all;
             }
         }
     }
