--- a/src/assets/style/variables/_colors.scss
+++ b/src/assets/style/variables/_colors.scss
@@ -3,7 +3,7 @@ $color-seconary: #ffd200;
 $color-seconary-alt: #ffd824;
 $color-gray: #d9d2cb;
 $color-gray-alt: #767676;
-
+$color-dark: #333334;   
 
 $color-libs-primary: #3366ff;
 $color-libs-primary-alt: #3366ffd9;
