fix modal mobile view

--- a/src/assets/style/modules/_modal.scss
+++ b/src/assets/style/modules/_modal.scss
@@ -19,7 +19,7 @@
         position: relative;
         border: 2px solid $color-seconary;
         border-radius: 5px;
-        width: 528px;
+        max-width: 528px;
         min-height: 300px;
         margin: 0px auto;
         padding: 20px 30px;
