--- a/src/assets/style/modules/_header.scss
+++ b/src/assets/style/modules/_header.scss
@@ -62,7 +62,8 @@
         box-sizing: border-box;
         position: absolute;
         width: 100%;
-        height: 100vh;
+        min-height: calc(100vh - 80px);
+        overflow: hidden;
         background-color: #fff;
         z-index: 300;
         padding: 20px;
@@ -80,6 +81,9 @@
                 color: $color-primary;
                 transition: 0.5s all;
             }
+        }
+        @media screen and (min-width: 992px) {
+            display: none;
         }
     }
 }
