--- a/src/assets/style/partials/_animations.scss
+++ b/src/assets/style/partials/_animations.scss
@@ -45,3 +45,25 @@
         }
     }
 }
+
+.sub-menu {
+    &-enter {
+        opacity: 0;
+        transform: translateX(100%);
+        &-active {
+            transition: all 0.5s ease-out;
+        }
+        &-from {
+            opacity: 0;
+            transform: translateX(100%);
+            transition: all 0.5s ease-out;
+        }
+    }
+    &-leave {
+        &-active {
+            opacity: 0;
+            transform: translateX(100%);
+            transition: all 0.5s ease-out;
+        }
+    }
+}
