response check cross loading done

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -15,6 +15,7 @@
 @import "./modules/cross-btn";
 @import "./modules/menu-btn";
 @import "./modules/input";
+@import "./modules/server-response";
 
 // Partials
 @import "./partials/animations";
