--- a/src/assets/style/modules/_server-response.scss
+++ b/src/assets/style/modules/_server-response.scss
@@ -1,19 +1,19 @@
 // Define vars we'll be using
 $brand-success: #5cb85c;
-$loader-size: 7em;
+$loader-size: 2em;
 $check-height: $loader-size/2;
 $check-width: $check-height/2;
 $check-left: ($loader-size/6 + $loader-size/12);
-$check-thickness: 3px;
+$check-thickness: 2px;
 $check-color: $brand-success;
 
 .circle-loader {
     margin-bottom: $loader-size/2;
-    border: 3px solid rgba(0, 0, 0, 0.2);
+    border: 2px solid rgba(0, 0, 0, 0.2);
     border-left-color: $color-primary;
     animation: loader-spin 1.2s infinite linear;
     position: relative;
-    display: inline-block;s
+    display: inline-block;
     vertical-align: top;
     border-radius: 50%;
     width: $loader-size;
@@ -119,7 +119,7 @@ $check-color: $brand-success;
         position: relative;
     }
     .line {
-        height: 3px;
+        height: 2px;
         width: 100%;
         position: absolute;
         margin-top: 47%;
@@ -138,5 +138,40 @@ $check-color: $brand-success;
     .right {
         animation: cross-right 0.3s ease-in;
         transform: rotate(-45deg);
+    }
+}
+
+.response {
+    width: 100%;
+    height: 1em;
+    position: relative;
+    &__mark {
+        position: absolute;
+        right: 50%;
+        transform: translateX(50%);
+        &--result {
+            transform: translateX(0);
+            left: 0;
+            transition: 1s all;
+        }
+    }
+    &__message {
+        margin-left: 2.5em;
+        font: $nwy-font-p;
+        opacity: 1;
+        transform: translateY(0);
+        animation-name: showResponseMessage;
+        animation-duration: 1s;
+    }
+}
+
+@keyframes showResponseMessage {
+    0% {
+        opacity: 0;
+        transform: translateX(20%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
