--- a/src/assets/style/modules/_input.scss
+++ b/src/assets/style/modules/_input.scss
@@ -2,7 +2,6 @@
 .input {
     &-container {
         width: 100%;
-        margin-top: 30px;
         padding-bottom: 25px;
         position: relative;
         overflow: hidden;
@@ -28,11 +27,17 @@
         z-index: 20;
     }
     &-error {
-        display: block;
+        display: flex;
+        justify-content: end;
+        align-items: center;
         position: absolute;
         bottom: 0;
+        right: 0;
         font: $nwy-font-label;
         color: red;
         z-index: 10;
+        svg {
+            margin-right: 5px;
+        }
     }
 }
