--- a/src/assets/style/modules/_input.scss
+++ b/src/assets/style/modules/_input.scss
@@ -2,7 +2,7 @@
 .input {
     &-container {
         width: 100%;
-        padding-bottom: 25px;
+        padding-bottom: 16px;
         position: relative;
         overflow: hidden;
     }
@@ -30,10 +30,9 @@
         display: flex;
         justify-content: end;
         align-items: center;
-        position: absolute;
-        bottom: 0;
-        right: 0;
         font: $nwy-font-label;
+        height: auto;
+        margin-top: 8px;
         color: red;
         z-index: 10;
         svg {
