--- a/src/assets/style/partials/_animations.scss
+++ b/src/assets/style/partials/_animations.scss
@@ -28,20 +28,23 @@
 .input-error {
     &-enter {
         opacity: 0;
-        transform: translateY(-10px);
+        height: translateY(0);
+        margin: 0;
         &-active {
-            transition: all 0.3s ease-out;
+            transition: all 0.3s;
         }
         &-from {
             opacity: 0;
-            transform: translateY(-10px);
+            height: 0;
+            margin: 0;
         }
     }
     &-leave {
         &-active {
             opacity: 0;
-            transform: translateY(-10px);
-            transition: all 0.3s ease-out;
+            height: 0;
+            transition: all 0.3s;
+            margin: 0;
         }
     }
 }
