--- a/src/assets/style/partials/_animations.scss
+++ b/src/assets/style/partials/_animations.scss
@@ -25,11 +25,13 @@
     }
 }
 
-.input-error {
+.height-increase {
     &-enter {
         opacity: 0;
-        height: translateY(0);
+        height: 0;
         margin: 0;
+        padding: 0;
+        transform: translateY(-20px);
         &-active {
             transition: all 0.3s;
         }
@@ -37,6 +39,8 @@
             opacity: 0;
             height: 0;
             margin: 0;
+            padding: 0;
+            transform: translateY(-20px);
         }
     }
     &-leave {
@@ -45,6 +49,8 @@
             height: 0;
             transition: all 0.3s;
             margin: 0;
+            padding: 0;
+            transform: translateY(-20px);
         }
     }
 }
@@ -91,5 +97,28 @@
             transform: translateY(-20px);
             transition: all 0.5s ease-out;
         }
+    }
+}
+
+.pulse {
+    animation: pulse 1s infinite;
+    &--text {
+        &:hover {
+            div {
+                animation: pulse 1s infinite;
+            }
+        }
+    }
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
     }
 }
