--- a/src/assets/style/variables/_colors.scss
+++ b/src/assets/style/variables/_colors.scss
@@ -3,7 +3,11 @@ $color-seconary: #ffd200;
 $color-seconary-alt: #ffd824;
 $color-gray: #d9d2cb;
 $color-gray-alt: #767676;
-$color-dark: #333334;   
+$color-dark: #333334;
+$color-light-red: #ffe9d5;
+$color-black-red: #7a0916;
+$color-black-green: #0a5554;
+$color-light-green: #d8fbde;
 
 $color-libs-primary: #3366ff;
 $color-libs-primary-alt: #3366ffd9;
