--- a/src/assets/style/modules/_server-response.scss
+++ b/src/assets/style/modules/_server-response.scss
@@ -143,22 +143,49 @@ $check-color: $brand-success;
 
 .response {
     width: 100%;
-    height: 1em;
-    position: relative;
-    &__mark {
-        position: absolute;
-        right: 50%;
-        transform: translateX(50%);
-        &--result {
-            transform: translateX(0);
-            left: 0;
-            transition: 1s all;
+    height: auto;
+    &__wrap {
+        width: 100%;
+        border-radius: 8px;
+        padding: 15px 18px;
+        margin-bottom: 10px;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: 0px;
+        box-sizing: border-box;
+        text-align: left;
+            p {
+            display: inline-block;
+        }
+        svg {
+            margin-right: 5px;
         }
     }
-    &__message {
-        margin-left: 2.5em;
-        font: $nwy-font-p;
+    &--error {
+        background: $color-light-red;
+        color: $color-black-red;
     }
+
+    &--success {
+        background: $color-light-green;
+        color: $color-black-green;
+    }
+
+    // &__mark {
+    //     position: absolute;
+    //     right: 50%;
+    //     transform: translateX(50%);
+    //     &--result {
+    //         transform: translateX(0);
+    //         left: 0;
+    //         transition: 1s all;
+    //     }
+    // }
+    // &__message {
+    //     margin-left: 2.5em;
+    //     font: $nwy-font-p;
+    // }
 }
 
 @keyframes showResponseMessage {
