--- a/src/assets/style/modules/_modal.scss
+++ b/src/assets/style/modules/_modal.scss
@@ -48,29 +48,13 @@
     }
 }
 
-.modal2 {
-    &__mask {
-        position: fixed;
-        z-index: 100;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        display: table;
-        transition: opacity 0.3s ease;
-    }
-    &__wrapper {
-        display: table-cell;
-        vertical-align: middle;
-        z-index: 200;
-    }
+.modal-next .modal {
     &__container {
         position: relative;
         border: 4px dashed #7b61ff;
         border-radius: 16px;
-        width: 528px;
-        height: 500px;
+        max-width: 528px;
+        // height: 760px;
         margin: 0px auto;
         padding: 20px 30px;
         display: flex;
