--- a/src/assets/style/variables/_colors.scss
+++ b/src/assets/style/variables/_colors.scss
@@ -11,3 +11,5 @@ $color-light-green: #d8fbde;
 
 $color-libs-primary: #3366ff;
 $color-libs-primary-alt: #3366ffd9;
+$color-libs-warning: #ffab00;
+$color-libs-warning-alt: #ffab00de;
