uploading files done

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -17,6 +17,7 @@
 @import "./modules/input";
 @import "./modules/next-input";
 @import "./modules/server-response/server-response";
+@import "./modules/upload-file";
 
 // Partials
 @import "./partials/animations";
