add label for uploader

--- a/src/assets/style/modules/_upload-file.scss
+++ b/src/assets/style/modules/_upload-file.scss
@@ -1,11 +1,20 @@
 .next-upload-file {
-    padding: 20px;
-    min-height: 106px;
-    background: rgba(145, 158, 171, 0.08);
-    border: 1px dashed rgba(145, 158, 171, 0.48);
-    border-radius: 12px;
-    margin-bottom: 20px;
-    position: relative;
+    &__label {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+        color: #637381;
+    }
+    &__content {
+        padding: 20px;
+        min-height: 106px;
+        background: rgba(145, 158, 171, 0.08);
+        border: 1px dashed rgba(145, 158, 171, 0.48);
+        border-radius: 12px;
+        margin-bottom: 20px;
+        position: relative;
+    }
     input {
         position: absolute;
         top: 0;
