fix stylistic bugs

--- a/src/assets/style/modules/_input.scss
+++ b/src/assets/style/modules/_input.scss
@@ -3,6 +3,7 @@
         width: 100%;
         position: relative;
         overflow: hidden;
+        margin-top: 20px;
     }
     &-label {
         font: $nwy-font-label;
