--- a/src/assets/style/modules/_modal.scss
+++ b/src/assets/style/modules/_modal.scss
@@ -5,7 +5,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         background-color: rgba(0, 0, 0, 0.5);
         display: table;
         transition: opacity 0.3s ease;
@@ -14,12 +14,14 @@
         display: table-cell;
         vertical-align: middle;
         z-index: 200;
+        height: 100vh;
     }
     &__container {
         position: relative;
         border: 2px solid $color-seconary;
         border-radius: 5px;
         max-width: 528px;
+        overflow-y: auto;
         margin: 0px auto;
         padding: 20px 30px;
         display: flex;
@@ -28,6 +30,9 @@
         background-color: #fff;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
         transition: all 0.3s ease;
+        &::-webkit-scrollbar {
+            display: none;
+        }
     }
     &__header {
         margin-top: 0;
@@ -51,10 +56,10 @@
 .modal-next .modal {
     &__container {
         position: relative;
-        border: 4px dashed #7b61ff;
         border-radius: 16px;
         max-width: 528px;
-        // height: 760px;
+        max-height: 80vh;
+        border: none;
         margin: 0px auto;
         padding: 20px 30px;
         display: flex;
