--- a/src/assets/style/modules/_upload-file.scss
+++ b/src/assets/style/modules/_upload-file.scss
@@ -7,15 +7,21 @@
         color: #637381;
     }
     &__content {
-        padding: 20px;
-        min-height: 106px;
+        padding: 16px;
         background: rgba(145, 158, 171, 0.08);
         border: 1px dashed rgba(145, 158, 171, 0.48);
         border-radius: 12px;
         margin-bottom: 20px;
         position: relative;
-    }   
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-sizing: border-box;
+        height: auto;
+    }
     input {
+        display: block;
         position: absolute;
         top: 0;
         left: 0;
@@ -38,27 +44,35 @@
         }
     }
     &__items {
-        display: flex;
+        height: 100%;
+        width: 100%;
+        display: inline-flex;
         flex-wrap: wrap;
-        gap: 8px;
+        gap: 3.2%;
+        row-gap: 0;
     }
     &__item {
         cursor: pointer;
-        width: 66px;
+        width: 17%;
         aspect-ratio: 1/1;
-        border-radius: 8px;
         position: relative;
+        margin: 5px 0;
         background-repeat: no-repeat, repeat;
-        // background-position: center;
         background-size: cover;
         text-align: center;
         display: flex;
         justify-content: center;
         align-items: center;
-        &--file {
-            border: 1px solid #919eab;
+        box-shadow: 0px 1px 2px rgba(145, 158, 171, 0.16);
+        border-radius: 8px;
+
+        p {
+            @media screen and (max-width: 520px) {
+                font-size: 10px;
+            }
         }
         svg {
+            transform: scale(1.5);
             position: absolute;
             right: -3px;
             top: -3px;
