--- a/src/assets/style/modules/_header.scss
+++ b/src/assets/style/modules/_header.scss
@@ -43,6 +43,16 @@
                 }
             }
         }
+        &__lang {
+            border-radius: 5px;
+            padding: 10px;
+            width: auto;
+            background-color: #fff;
+            border: none;
+            font: $libs-font-p;
+            color: #000;
+            cursor: pointer;
+        }
     }
     &__burger {
         position: absolute;
