tweak test fetching + stylistic errors fixed

--- a/src/assets/style/modules/_next-input.scss
+++ b/src/assets/style/modules/_next-input.scss
@@ -1,6 +1,7 @@
 .next-input {
     &__content {
         position: relative;
+        margin-top: 20px;
         margin-bottom: 20px;
         &--error {
             .next-input__input {
