--- a/src/assets/style/modules/_modal.scss
+++ b/src/assets/style/modules/_modal.scss
@@ -1,28 +1,28 @@
 .modal {
     &__mask {
+        display: block;
+        overflow-x: hidden;
+        overflow-y: auto;
         position: fixed;
         z-index: 100;
         top: 0;
         left: 0;
+        right: 0;
+        bottom: 0;
         width: 100%;
-        height: 100vh;
         background-color: rgba(0, 0, 0, 0.5);
-        display: table;
         transition: opacity 0.3s ease;
     }
     &__wrapper {
-        display: table-cell;
         vertical-align: middle;
-        z-index: 200;
-        height: 100vh;
+        margin: 1.75em auto;
+        max-width: 528px;
     }
     &__container {
         position: relative;
         border: 2px solid $color-seconary;
         border-radius: 5px;
-        max-width: 528px;
         overflow-y: auto;
-        margin: 0px auto;
         padding: 20px 30px;
         display: flex;
         flex-direction: column;
@@ -57,10 +57,7 @@
     &__container {
         position: relative;
         border-radius: 16px;
-        max-width: 528px;
-        max-height: 80vh;
         border: none;
-        margin: 0px auto;
         padding: 20px 30px;
         display: flex;
         flex-direction: column;
