add cards for each button

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -18,6 +18,7 @@
 @import "./modules/next-input";
 @import "./modules/server-response/server-response";
 @import "./modules/upload-file";
+@import "./modules/card";
 
 // Partials
 @import "./partials/animations";
