--- a/src/assets/style/layout/_base.scss
+++ b/src/assets/style/layout/_base.scss
@@ -24,6 +24,9 @@
 .justify-content-around {
     justify-content: space-around;
 }
+.flex-wrap {
+    flex-wrap: wrap;
+}
 
 .align-items-start {
     align-items: start;
