--- a/src/assets/style/modules/_page-buttons.scss
+++ b/src/assets/style/modules/_page-buttons.scss
@@ -1,13 +1,12 @@
 .page-buttons {
     width: 100%;
-    height: calc(100vh - 80px);
+    margin: 30px 0;
+    min-height: calc(100vh - 80px);
     &__wrap {
         width: 100%;
-        .btn,
-        .btn2 {
-            @media screen and (max-width: 992px) {
-                width: 30%;
-            }
-        }
+    }
+    &__item {
+        width: 350px;
+        margin: 10px 0;
     }
 }
