--- a/src/assets/style/modules/components/_card.scss
+++ b/src/assets/style/modules/components/_card.scss
@@ -26,7 +26,7 @@
             font-weight: 400;
             font-size: 16px;
             line-height: 24px;
-            color: #637381;
+            color: $color-libs-label;
         }
         &__buttons {
             margin-top: 24px;
