--- a/src/assets/style/layout/inputs/_next-input.scss
+++ b/src/assets/style/layout/inputs/_next-input.scss
@@ -5,10 +5,10 @@
         margin-bottom: 20px;
         &--error {
             .next-input__input {
-                border: 1px solid #ff5630;
+                border: 1px solid $color-libs-error;
             }
             .next-input__label {
-                color: #ff5630;
+                color: $color-libs-error;
             }
         }
 
@@ -61,7 +61,7 @@
         font-weight: 400;
         font-size: 16px;
         line-height: 24px;
-        color: #637381;
+        color: $color-libs-label;
         position: absolute;
         pointer-events: none;
 
@@ -81,7 +81,7 @@
         font-size: 12px;
         line-height: 18px;
 
-        color: #ff5630;
+        color: $color-libs-error;
         svg {
             margin-right: 4.65px;
         }
