--- a/src/assets/style/variables/_colors.scss
+++ b/src/assets/style/variables/_colors.scss
@@ -8,8 +8,12 @@ $color-light-red: #ffe9d5;
 $color-black-red: #7a0916;
 $color-black-green: #0a5554;
 $color-light-green: #d8fbde;
+$input-error: red;
 
 $color-libs-primary: #3366ff;
 $color-libs-primary-alt: #3366ffd9;
 $color-libs-warning: #ffab00;
 $color-libs-warning-alt: #ffab00de;
+$color-libs-error: #ff5630;
+$color-libs-label: #637381;
+$color-libs-message: #919eab;
