--- a/src/assets/style/layout/inputs/_upload-file.scss
+++ b/src/assets/style/layout/inputs/_upload-file.scss
@@ -24,6 +24,7 @@
         box-sizing: border-box;
         height: auto;
         overflow-x: auto;
+        transition: 1s all;
 
         &--error {
             border: 1px dashed $color-libs-error;
@@ -37,6 +38,7 @@
         position: absolute;
         top: 0;
         left: 0;
+        z-index: 100;
         cursor: pointer;
         width: 100%;
         height: 100%;
@@ -79,8 +81,19 @@
         box-shadow: 0px 1px 2px rgba(145, 158, 171, 0.16);
         border-radius: 8px;
         &__wrap {
+            position: relative;
             display: inline-block;
             margin-right: 20px;
+            &:hover {
+                p.add {
+                    font-size: 40px;
+                    transition: 1s all;
+                }
+            }
+            p.add {
+                font-size: 30px;
+                transition: 1s all;
+            }
         }
         p {
             @media screen and (max-width: 520px) {
