--- a/src/assets/style/modules/components/_modal.scss
+++ b/src/assets/style/modules/components/_modal.scss
@@ -40,6 +40,9 @@
             border-radius: 0;
         }
     }
+    &__form-response {
+        margin-bottom: 20px;
+    }
     &__header {
         margin-top: 0;
         font-weight: 700;
