--- a/src/assets/style/modules/components/_card.scss
+++ b/src/assets/style/modules/components/_card.scss
@@ -15,6 +15,14 @@
     }
     &__content {
         padding: 24px;
+        height: 150px;
+        min-height: auto;
+        transition: 0.3 all;
+        &__opened {
+            height: auto;
+            min-height: 150px;
+            transition: 0.3 all;
+        }
         &__title {
             font-weight: 700;
             font-size: 18px;
@@ -28,13 +36,21 @@
             line-height: 24px;
             color: $color-libs-label;
         }
+        &__show-description {
+            text-align: center;
+            cursor: pointer;
+            transition: 0.3s all;
+            &:hover {
+                font-size: 17px;
+                transition: 0.3s all;
+            }
+        }
         &__buttons {
             margin-top: 24px;
         }
     }
     &:hover {
-        transform: scale(1.05);
-        box-shadow: -40px 40px 80px -8px rgba(145, 158, 171, 0.5);
+        transform: scale(1.02);
         transition: 0.5s all;
     }
 }
