--- a/src/assets/style/modules/pages/_header.scss
+++ b/src/assets/style/modules/pages/_header.scss
@@ -1,6 +1,10 @@
 .header {
     height: 80px;
     background-color: $color-primary;
+    @media screen and (max-width: 992px) {
+        height: 64px;
+    }
+
     &__wrap {
         height: 100%;
         padding: 0 40px;
@@ -56,7 +60,7 @@
     }
     &__burger {
         position: absolute;
-        background-color: $color-seconary;
+        // background-color: $color-seconary;
         right: 0;
         top: 0;
         height: 100%;
@@ -73,13 +77,26 @@
         position: absolute;
         width: 100%;
         min-height: calc(100vh - 80px);
-        overflow: hidden;
         background-color: #fff;
         z-index: 300;
         padding: 20px;
+        max-height: 70vh;
+        overflow-y: auto;
+
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        flex-direction: column;
+        &__content {
+            display: flex;
+            justify-content: start;
+            align-items: center;
+            flex-direction: column;
+        }
         &__item {
             margin-bottom: 20px;
             font: $nwy-font-nav;
+            text-align: center;
             display: block;
             font-weight: bold;
             color: $color-dark;
