--- a/src/assets/style/modules/pages/_page-buttons.scss
+++ b/src/assets/style/modules/pages/_page-buttons.scss
@@ -8,5 +8,8 @@
     &__item {
         width: 350px;
         margin: 10px 0;
+        @media screen and (max-width: 500px) {
+            width: 90%;
+        }
     }
 }
