fix sub menu modal animation

--- a/src/assets/style/modules/components/_modal.scss
+++ b/src/assets/style/modules/components/_modal.scss
@@ -48,7 +48,7 @@
         font-weight: 700;
         font-size: 18px;
         line-height: 28px;
-        color: #212b36;
+        color: $color-text;
     }
     &__body {
         margin: 20px 0;
@@ -94,8 +94,9 @@
         font-weight: 700;
         font-size: 18px;
         line-height: 28px;
+        padding-right: 25px;
 
-        color: #212b36;
+        color: $color-text;
     }
     &__body {
         margin: 44px 0;
