--- a/src/assets/style/variables/_colors.scss
+++ b/src/assets/style/variables/_colors.scss
@@ -17,3 +17,4 @@ $color-libs-warning-alt: #ffab00de;
 $color-libs-error: #ff5630;
 $color-libs-label: #637381;
 $color-libs-message: #919eab;
+$color-text: #212b36;
