--- a/src/assets/style/modules/components/_card.scss
+++ b/src/assets/style/modules/components/_card.scss
@@ -27,7 +27,7 @@
             font-weight: 700;
             font-size: 18px;
             line-height: 28px;
-            color: #212b36;
+            color: $color-text;
         }
         &__description {
             margin-top: 24px;
