--- a/src/assets/style/modules/pages/_header.scss
+++ b/src/assets/style/modules/pages/_header.scss
@@ -69,7 +69,7 @@
             font-size: 12px;
             line-height: 15px;
             text-align: center;
-            color: #212b36;
+            color: $color-text;
             @media screen and (max-width: 992px) {
                 padding: 8px;
                 background: #ffffff;
@@ -90,38 +90,63 @@
     &__sub-menu {
         box-sizing: border-box;
         position: absolute;
-        width: 100%;
-        min-height: calc(100vh - 80px);
-        background-color: #fff;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(69, 79, 91, 0.9);
         z-index: 300;
-        padding: 20px;
-        max-height: 70vh;
         overflow-y: auto;
-
         display: flex;
-        justify-content: start;
-        align-items: center;
-        flex-direction: column;
+        justify-content: end;
         &__content {
-            display: flex;
-            justify-content: start;
-            align-items: center;
-            flex-direction: column;
-        }
-        &__item {
-            margin-bottom: 20px;
-            font: $nwy-font-nav;
-            text-align: center;
-            display: block;
-            font-weight: bold;
-            color: $color-dark;
-            &--active {
-                color: $color-primary;
-                transition: 0.5s all;
+            padding: 15px;
+            padding-top: 0;
+            width: 75%;
+            background-color: #fff;
+            &__header {
+                width: 100%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 8px 0;
+                border-bottom: 1px solid rgba(145, 158, 171, 0.16);
+                &__title {
+                    font-weight: 600;
+                    font-size: 16px;
+                    line-height: 19px;
+                    text-align: center;
+                    color: $color-text;
+                }
             }
-            &:hover {
-                color: $color-primary;
-                transition: 0.5s all;
+            &__nav {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+                gap: 4px;
+                &__item {
+                    font-weight: 500;
+                    font-size: 16px;
+                    line-height: 19px;
+                    text-align: right;
+                    padding: 10px;
+                    text-align: end;
+                    color: #454f5b;
+                    width: 100%;
+                    border-radius: 4px;
+                    transition: all 0.3s;
+                    &--active {
+                        color: $color-primary;
+                        transition: 0.5s all;
+                    }
+                    &:hover {
+                        color: $color-primary;
+                        transition: 0.5s all;
+                        background: #d6e4ff;
+                        transition: all 0.3s;
+                    }
+                }
             }
         }
         @media screen and (min-width: 992px) {
