--- a/src/assets/style/partials/_animations.scss
+++ b/src/assets/style/partials/_animations.scss
@@ -57,7 +57,7 @@
             }
         }
         &-from {
-            transform: translateX(100%);
+            // transform: translateX(100%);
             opacity: 0;
             .sub-menu__content {
                 transform: translateX(100%);
@@ -73,7 +73,7 @@
             }
         }
         &-to {
-            transform: translateX(100%);
+            // transform: translateX(100%);
             opacity: 0;
             .sub-menu__content {
                 transform: translateX(100%);
