--- a/src/assets/style/modules/pages/_page-doc.scss
+++ b/src/assets/style/modules/pages/_page-doc.scss
@@ -2,13 +2,21 @@
     &__title {
         text-align: center;
         font-size: 20px;
+        margin: 20px 0;
     }
     &__block {
         background: #ffffff;
         box-shadow: 0px 0px 2px rgba(145, 158, 171, 0.2), 0px 12px 24px -4px rgba(145, 158, 171, 0.12);
         border-radius: 16px;
         padding: 24px;
-        height: 200px;
+        min-height: 200px;
+        margin-top: 30px;
+        &__block {
+            gap: 10px;
+            &__item {
+                display: inline-block;
+            }
+        }
         &__description {
             margin: 10px 0 30px 0;
         }
