create upload input block

--- a/src/assets/style/modules/pages/_page-doc.scss
+++ b/src/assets/style/modules/pages/_page-doc.scss
@@ -16,6 +16,9 @@
             &__item {
                 display: inline-block;
             }
+            &__uploader {
+                width: 30%;
+            }
         }
         &__description {
             margin: 10px 0 30px 0;
