--- a/src/assets/style/modules/pages/_page-doc.scss
+++ b/src/assets/style/modules/pages/_page-doc.scss
@@ -1,4 +1,5 @@
 .doc-page {
+    margin-bottom: 200px;
     &__title {
         text-align: center;
         font-size: 20px;
@@ -12,12 +13,21 @@
         min-height: 200px;
         margin-top: 30px;
         &__block {
+            margin-top: 30px;
             gap: 10px;
             &__item {
                 display: inline-block;
+                margin: 0 auto;
+                @media screen and (max-width: 700px) {
+                    width: 100%;
+                }
             }
             &__uploader {
                 width: 30%;
+                margin: 0 auto;
+                @media screen and (max-width: 700px) {
+                    width: 100%;
+                }
             }
         }
         &__description {
