--- a/src/assets/style/modules/pages/_header.scss
+++ b/src/assets/style/modules/pages/_header.scss
@@ -94,6 +94,7 @@
         left: 0;
         right: 0;
         bottom: 0;
+        min-height: 100vh;
         background: rgba(69, 79, 91, 0.9);
         z-index: 300;
         overflow-y: auto;
@@ -104,6 +105,9 @@
             padding-top: 0;
             width: 75%;
             background-color: #fff;
+            @media screen and (min-width: 992px) {
+                width: 30%;
+            }
             &__header {
                 width: 100%;
                 display: flex;
