create author page

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -14,6 +14,7 @@
 // Modules
 @import "./modules/pages/page-buttons";
 @import "./modules/pages/page-doc";
+@import "./modules/pages/page-author";
 @import "./modules/pages/header";
 @import "./modules/components/modal";
 @import "./modules/buttons/cross-btn";
